[gd_scene load_steps=6 format=3 uid="uid://b2v6uo0ntlf76"]

[ext_resource type="Script" path="res://main_menu/settings_menu.gd" id="1_igocu"]
[ext_resource type="PackedScene" uid="uid://dndrc5eqw8jdu" path="res://main_menu/sound_slider.tscn" id="2_u1mmi"]

[sub_resource type="Theme" id="Theme_ehowp"]
PopupMenu/font_sizes/font_size = 32
PopupMenu/font_sizes/title_font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fnipf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcnqf"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igocu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -247.0
offset_right = 304.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 4.25
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="WindowModeLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Window mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindowModeOptions" type="OptionButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ehowp")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnipf")

[node name="HFlowContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionOptions" type="OptionButton" parent="MarginContainer/VBoxContainer2/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_ehowp")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_fnipf")

[node name="MasterSoundSlider" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_u1mmi")]
layout_mode = 2
size_flags_horizontal = 4
bus_type = "Master"

[node name="MusicSoundSlider2" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_u1mmi")]
layout_mode = 2
size_flags_horizontal = 4
bus_type = "Music"

[node name="EffictSoundSlider3" parent="MarginContainer/VBoxContainer2/VBoxContainer" instance=ExtResource("2_u1mmi")]
layout_mode = 2
size_flags_horizontal = 4
bus_type = "SFX"

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_bcnqf")
text = "Accept
"

[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer/WindowModeOptions" to="." method="_on_window_mode_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VBoxContainer/HFlowContainer/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/AcceptButton" to="." method="_on_accept_button_pressed"]
